--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "firebase-functions": "^6.3.2",
     "framer-motion": "^12.19.1",
     "googleapis": "^149.0.0",
+    "lucide-react": "^0.523.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.3",
