--- a/server/functions/package.json
+++ b/server/functions/package.json
@@ -18,7 +18,10 @@
   "dependencies": {
     "@google-cloud/local-auth": "^3.0.1",
     "firebase-admin": "^12.6.0",
-    "firebase-functions": "^6.0.1"
+    "firebase-functions": "^6.0.1",
+    "google-auth-library": "^9.0.0",
+    "googleapis": "^128.0.0",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "eslint": "^8.15.0",
